tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/invalidSeriesNum.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:786795beebc0107bbd279b05ff5f6467d4e28d5ddcaf058cace5231cc024b0e8
size 64870
